 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.5:

 - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
 - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
 - [ZBX-277] fixed possible server crash when evaluating functions str(), regexp() and iregexp() (Alexei)
 - [ZBX-271] added support of system.boottime[] for OpenBSD & FreeBSD agents (Sasha)
 - [ZBX-268] added support of proc.num[], proc.mem[] & system.cpu.num[] for OpenBSD agents (Sasha)
 - [ZBX-263] fixed problem with saving of lastlogsize for log[] and eventlog[] items when history is set to 0 (Sasha)
 - [ZBX-250] speed improvement for Triggers when use "{ITEM.VALUE}" macro (Sasha)
 - [ZBX-250] 100% CPU on server side after connection loss (Sasha)
 - [ZBX-243] speed improvement for windows agent for eventlog[] processing (Sasha)
 - [DEV-92] added supprt of multiple windows agents, service description (Sasha)
 - [ZBX-7] added support of system.cpu.util[] for FreeBSD agents, thanks to 'brick' (Sasha)

Changes for 1.4.4:

 - [ZBX-220] fixed agent crash in case of timeout during first connect (Sasha)
 - [ZBX-219] fixed server crash in processing of discovery (Sasha)

Changes for 1.4.3:

 - [ZBX-218] fixed problem "Unable to add performance counter" on start of win agent(Sasha)
 - [ZBX-192] fixed active checks stops after connection loss (Sasha)
 - [ZBX-152] fixed inefficient check of user permissions (Alexei)
 - [ZBX-189, CVE-2007-6210] fixed super-user permissions of user commands (Alexei)
 - [ZBX-149] fixed incorrect processing of vm.memory.size key in FreeBSD (Sasha)
 - [ZBX-109] added support of vm.memory.size[pfree] Linux, FreeBSD & Win agents (Sasha)